--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,26 +1,29 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+    inputs:
+      skip_version:
+        description: "Skip changeset version/commit and only publish"
+        required: false
+        default: false
+        type: boolean
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency: release-main
 
 permissions:
-  id-token: write
   contents: write
-  pull-requests: write
+  id-token: write
 
 jobs:
   release:
-    name: Release
+    name: Version and publish
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: main
           fetch-depth: 0
 
       - name: Setup pnpm
@@ -40,13 +43,32 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Create Release Pull Request or Publish
-        id: changesets
-        uses: changesets/action@v1
-        with:
-          version: pnpm run version
-          publish: pnpm run release
-          title: "changesets: update versions of packages for release"
-          createGithubReleases: false
+      - name: Ensure changeset exists
+        if: ${{ !inputs.skip_version }}
+        run: |
+          if ! find .changeset -maxdepth 1 -type f -name "*.md" | grep -q .; then
+            echo "No changesets found. Add one (e.g. pnpm changeset:patch 'Your message') before running a release."
+            exit 1
+          fi
+
+      - name: Version packages
+        if: ${{ !inputs.skip_version }}
+        run: pnpm run version
+
+      - name: Commit version changes
+        if: ${{ !inputs.skip_version }}
+        run: |
+          if git diff --quiet; then
+            echo "No version changes to commit."
+            exit 0
+          fi
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git add -A
+          git commit -m "chore: version packages for release"
+          git push origin HEAD:main
+
+      - name: Publish
+        run: pnpm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
